# vanilla_qwen_inference

./: .gitignore  main.py  pyproject.toml
prompts/: prompt_inference.txt
scripts/: interactmode.sh  runmaindotpy.sh
